[workspace]
members = [
    "varlink_parser",
    "varlink_generator",
    "varlink_derive",
    "varlink",
    "varlink_stdinterfaces",
    "varlink-cli",
    "varlink-certification",
    "examples/example",
    "examples/more",
    "examples/ping",
    "examples/async_ping",
    "examples/async_example",
]