[workspace]
members = [
    "varlink_parser",
    "varlink_generator",
    "varlink_derive",
    "varlink",
    "varlink_stdinterfaces",
    "varlink-cli",
    "varlink-certification",
    "examples/example",
    "examples/more",
    "examples/ping",
    "examples/async_ping",
    "examples/async_example",
]
resolver = "1"

[workspace.metadata.release]
# Shared release configuration for all crates
allow-branch = ["master", "main"]
sign-commit = false
sign-tag = false
push-remote = "origin"

[workspace.dependencies]
anyhow = "1.0.93"
async-trait = "0.1"
bitflags = "2.6.0"
clap = "4.5.49"
clap_complete = "4.5.60"
colored = "3.0.0"
colored_json = "5.0.0"
getopts = "0.2.21"
libc = { version = "0.2.126", default-features = false }
peg = "0.8.5"
proc-macro2 = "1.0.6"
quote = "1.0.2"
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
static_assertions = "1.1.0"
syn = "2.0"
tempdir = "0.3.7"
tempfile = "3.1.0"
thiserror = "2.0.3"
tokio = "1"
unified-diff = "0.2.1"
varlink_parser = { version = "6.0", path = "varlink_parser" }
varlink_stdinterfaces = { version = "13", path = "varlink_stdinterfaces" }
varlink_derive = { version = "13", path = "varlink_derive" }
varlink_generator = { version = "13", path = "varlink_generator" }
varlink = { version = "13", path = "varlink" }
