[package]
name = "varlink-certification"
version = "2.0.3"
authors = ["Harald Hoyer <harald@redhat.com>"]
build = "build.rs"
edition = "2018"
publish = false

[dependencies]
varlink = { version = "11", path = "../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
getopts = "0.2.21"
chainerror = "0.7.0"

[build-dependencies]
varlink_generator = { version = "9", path = "../varlink_generator" }

[dev-dependencies]
escargot = "0.5.0"
chainerror = "0.7.0"
