[package]
name = "varlink-certification"
version = "2.0.5"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false
rust-version = "1.70.0"

[dependencies]
varlink = { path = "../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
getopts = "0.2.21"
thiserror = "2.0.3"

[build-dependencies]
varlink_generator = { path = "../varlink_generator" }
