[package]
name = "varlink-certification"
version = "2.0.6"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false
rust-version = "1.70.0"

[dependencies]
varlink = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
getopts = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
varlink_generator = { workspace = true }
