[package]
name = "varlink-cli"
version = "4.5.4"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink-cli"
repository = "https://github.com/varlink/rust"
description = "varlink command line tool"

[[bin]]
name = "varlink"
path = "src/main.rs"

[dependencies]
varlink = { version = "11", path = "../varlink" }
varlink_stdinterfaces = { version = "11", path = "../varlink_stdinterfaces" }
varlink_parser = { version = "4.3", path = "../varlink_parser" }
serde = "1.0.102"
serde_json = "1.0.41"
clap = "2.33.0"
colored_json = "2.1.0"
chainerror = "0.8.0"
libc = { version = "0.2.126", default-features = false }
bitflags = "2.4.1"
