[package]
name = "varlink-cli"
version = "4.5.4"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink-cli"
repository = "https://github.com/varlink/rust"
description = "varlink command line tool"

[[bin]]
name = "varlink"
path = "src/main.rs"

[dependencies]
varlink = { workspace = true }
varlink_stdinterfaces = { workspace = true }
varlink_parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
colored_json = { workspace = true }
anyhow = { workspace = true }
libc = { workspace = true }
bitflags = { workspace = true }
