[package]
name = "varlink"
version = "5.3.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink"
repository = "https://github.com/varlink/rust"
description = "Client and server support for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }

[lib]
name = "varlink"
path = "src/lib.rs"

[dependencies]
itertools = "0"
serde = "1"
serde_derive = "1"
serde_json = "1"
bytes = "0"
tempfile = "3"
chainerror = "0.3"

[target.'cfg(windows)'.dependencies]
uds_windows = { version="0.1.3" }
winapi = { version = "0.3", features = ["winuser", "winsock2"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0", default-features = false }
unix_socket = "0.5"
