[package]
name = "varlink"
version = "11.0.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink"
repository = "https://github.com/varlink/rust"
description = "Client and server support for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }

[lib]
name = "varlink"
path = "src/lib.rs"

[dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
tempfile = "3.1.0"

[features]
default = []

[target.'cfg(windows)'.dependencies]
uds_windows = { version="1.0.1" }
winapi = { version = "0.3", features = ["winuser", "winsock2"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0", default-features = false }
unix_socket = "0.5"

[dev-dependencies]
static_assertions = "1.1.0"
