[package]
name = "varlink"
version = "11.0.1"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink"
repository = "https://github.com/varlink/rust"
description = "Client and server support for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }

[lib]
name = "varlink"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio= { workspace = true, features = ["net", "io-util", "rt", "sync", "time"], optional = true }
async-trait= { workspace = true, optional = true }

[features]
default = []
tokio = ["dep:tokio", "dep:async-trait"]

[target.'cfg(windows)'.dependencies]
uds_windows = { version="1.0.1" }
winapi = { version = "0.3", features = ["winuser", "winsock2"] }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2.126", default-features = false }

[dev-dependencies]
static_assertions = { workspace = true }
varlink_derive = { workspace = true }
varlink_generator = { workspace = true }
