[package]
name = "varlink_derive"
version = "10.1.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_derive"
repository = "https://github.com/varlink/rust"
description = "Rust code generator macro for the varlink protocol."
rust-version = "1.70.0"

[lib]
proc-macro = true
name = "varlink_derive"
path = "src/lib.rs"

[dependencies]
varlink_generator = { version = "11.0", path = "../varlink_generator" }

[dev-dependencies]
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
varlink = { version = "11.0", path = "../varlink" }
