[package]
name = "varlink_derive"
version = "13.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_derive"
repository = "https://github.com/varlink/rust"
description = "Rust code generator macro for the varlink protocol."
rust-version = "1.73.0"

[lib]
proc-macro = true
name = "varlink_derive"
path = "src/lib.rs"

[dependencies]
varlink_generator = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
varlink = { path = "../varlink" }
