[package]
name = "varlink_generator"
version = "10.1.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_generator"
repository = "https://github.com/varlink/rust"
description = "Rust code generator for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[lib]
name = "varlink_generator"
path = "src/lib.rs"

[[bin]]
name = "varlink-rust-generator"
path = "src/bin/varlink-rust-generator.rs"

[dependencies]
varlink_parser = { version = "4.2", path = "../varlink_parser" }
quote = "1.0.2"
proc-macro2 = "1.0.6"
getopts = "0.2.21"
syn = "2.0.15"
chainerror = "0.7.0"

[dev-dependencies]
unified-diff = "0.2.1"
tempdir = "0.3.7"

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }
