[package]
name = "varlink_generator"
version = "10.1.1"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_generator"
repository = "https://github.com/varlink/rust"
description = "Rust code generator for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[lib]
name = "varlink_generator"
path = "src/lib.rs"

[[bin]]
name = "varlink-rust-generator"
path = "src/bin/varlink-rust-generator.rs"

[dependencies]
varlink_parser = { version = "4.3", path = "../varlink_parser" }
quote = "1.0.2"
proc-macro2 = "1.0.6"
getopts = "0.2.21"
syn = "2.0.28"
chainerror = "0.8.0"

[dev-dependencies]
unified-diff = "0.2.1"
tempdir = "0.3.7"

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }
