[package]
name = "varlink_generator"
version = "12.0.1"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_generator"
repository = "https://github.com/varlink/rust"
description = "Rust code generator for the varlink protocol."
readme = "README.md"

keywords = ["varlink", "ipc", "rpc", "protocol"]
categories = ["os", "development-tools", "network-programming"]

[lib]
name = "varlink_generator"
path = "src/lib.rs"

[[bin]]
name = "varlink-rust-generator"
path = "src/bin/varlink-rust-generator.rs"

[dependencies]
varlink_parser = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
getopts = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
unified-diff = { workspace = true }
tempdir = { workspace = true }

[badges]
travis-ci = { repository = "varlink/rust" }
coveralls = { repository = "varlink/rust", branch = "master", service = "github" }
