[package]
name = "varlink_parser"
version = "4.0.3"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
documentation = "https://docs.rs/varlink_parser/"
homepage = "https://github.com/varlink/rust/blob/master/varlink_parser"
repository = "https://github.com/varlink/rust"
description = "A crate for parsing varlink interface definition files."
readme = "README.md"

keywords = ["parser", "varlink", "ipc", "rpc", "protocol"]
categories = ["parsing", "development-tools"]
build = "build.rs"

[badges]
travis-ci = { repository = "varlink/rust" }

[dependencies]
ansi_term = "0.12"
chainerror = "0.4.2"

[features]
default = []
dynamic_peg = [ "peg" ]

[build-dependencies]
peg = {version = "0.5", optional = true }
