[package]
name = "varlink_parser"
version = "5.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/varlink_parser/"
homepage = "https://github.com/varlink/rust/blob/master/varlink_parser"
repository = "https://github.com/varlink/rust"
description = "A crate for parsing varlink interface definition files."
readme = "README.md"

keywords = ["parser", "varlink", "ipc", "rpc", "protocol"]
categories = ["parsing", "development-tools"]

[badges]
travis-ci = { repository = "varlink/rust" }

[dependencies]
colored = "2.1.0"
thiserror = "2.0.3"
peg = "0.6.3"
