[package]
name = "varlink_stdinterfaces"
version = "11.0.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_stdinterfaces"
repository = "https://github.com/varlink/rust"
description = "varlink common interfaces"
build = "build.rs"

[dependencies]
varlink = { version = "10", path = "../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"

[build-dependencies]
varlink_generator = { version = "9", path = "../varlink_generator" }

[dev-dependencies]
static_assertions = "1.1.0"
