[package]
name = "varlink_stdinterfaces"
version = "12.0.1"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
rust-version = "1.73.0"

license = "MIT OR Apache-2.0"
documentation = "https://github.com/varlink/rust/blob/master/varlink/README.md"
homepage = "https://github.com/varlink/rust/blob/master/varlink_stdinterfaces"
repository = "https://github.com/varlink/rust"
description = "varlink common interfaces"
build = "build.rs"

[features]
tokio = ["varlink/tokio", "async-trait"]

[dependencies]
varlink = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true, optional = true }

[build-dependencies]
varlink_generator = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
