[package]
name = "async_example"
version = "1.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2021"
publish = false
rust-version = "1.70.0"

[dependencies]
anyhow = "1"
async-trait = "0.1"
varlink = { path = "../../varlink", features = ["tokio"] }
varlink_derive = { path = "../../varlink_derive" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
getopts = "0.2"
tokio = { version = "1", features = ["full"] }
