[package]
name = "async_example"
version = "2.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2021"
publish = false
rust-version = "1.80.0"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
varlink = { workspace = true, features = ["tokio"] }
varlink_derive = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
getopts = { workspace = true }
tokio = { workspace = true, features = ["full"] }
