[package]
name = "async_ping"
version = "1.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2021"
publish = false
rust-version = "1.70.0"

[features]
default = ["tokio"]
tokio = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
varlink = { version = "11", path = "../../varlink", features = ["tokio"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
varlink_generator = { path = "../../varlink_generator" }
