[package]
name = "async_ping"
version = "1.0.1"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2021"
publish = false
rust-version = "1.73.0"

[features]
default = ["tokio"]
tokio = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
varlink = { workspace = true, features = ["tokio"] }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
varlink_generator = { workspace = true }
