[package]
name = "example"
version = "3.0.2"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
publish = false

[dependencies]
varlink = { path = "../../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
getopts = "0.2.21"
varlink_derive = { path = "../../varlink_derive" }

chainerror = "0.7.0"
