[package]
name = "example"
version = "3.0.3"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
edition = "2018"
publish = false
rust-version = "1.70.0"

[dependencies]
anyhow = { workspace = true }
varlink = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
getopts = { workspace = true }
varlink_derive = { workspace = true }
