[package]
name = "more"
version = "2.0.2"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false

[dependencies]
varlink = { path = "../../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
getopts = "0.2.21"

[build-dependencies]
varlink_generator = { path = "../../varlink_generator" }

[dev-dependencies]
static_assertions = "1.1.0"
