[package]
name = "more"
version = "3.0.0"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false
rust-version = "1.73.0"

[dependencies]
varlink = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
getopts = { workspace = true }

[build-dependencies]
varlink_generator = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
