[package]
name = "ping"
version = "2.0.3"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false
rust-version = "1.70.0"

[dependencies]
varlink = { version = "11", path = "../../varlink" }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
getopts = "0.2.21"
libc = "0.2.65"
chainerror = "0.8.0"

[build-dependencies]
varlink_generator = { path = "../../varlink_generator" }
