[package]
name = "ping"
version = "2.0.4"
authors = ["Harald Hoyer <harald@hoyer.xyz>"]
build = "build.rs"
edition = "2018"
publish = false
rust-version = "1.70.0"

[dependencies]
anyhow = { workspace = true }
varlink = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
getopts = { workspace = true }
libc = { workspace = true }

[build-dependencies]
varlink_generator = { workspace = true }
